--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -30,7 +30,7 @@ div.col-100 {
 
 div.col-25 {
     width: 25%;
-    padding: 10px 8px;
+    padding: 15px 8px;
 }
 
 header div#main-title {
@@ -43,7 +43,7 @@ header div#main-title {
 }
 
 main div.card {
-    background: #FFF url("../img/pattern.png") repeat-y top center;
+    background: url("../img/pattern.png") repeat-y top center;
     background-size: contain;
     height: 220px;
     border-radius: 5px;
@@ -55,8 +55,23 @@ main div.card:hover {
     background: #FFF;
 }
 
+main div.card.active {
+    background: #FFF;
+}
+
 main div.card > img {
+    width: 70%;
     position: absolute;
-    top: 0;
-    width: 100%;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: none;
+}
+
+main div.card > div.card-title {
+    text-align: center;
+}
+
+main div.card:hover > img, main div.card.active > img {
+    display: block;
 }
