--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -69,9 +69,18 @@ main div.card > img {
 }
 
 main div.card > div.card-title {
+    width: 100%;
+    font-size: 20px;
+    color: #E61986;
     text-align: center;
+    position: absolute;
+    bottom: 4%;
+    display: none;
 }
 
-main div.card:hover > img, main div.card.active > img {
+main div.card:hover > img,
+main div.card.active > img,
+main div.card:hover > div.card-title,
+main div.card.active > div.card-title {
     display: block;
 }
