--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -49,46 +49,52 @@ header div#main-title {
 /*main content*/
 
 main div.card {
+    position: relative;
     background: url("../img/pattern.png") repeat-y top center;
     background-size: contain;
-    height: 220px;
+    text-align: center;
+    padding: 20px 0 30px 0;
     border-radius: 5px;
     box-shadow: 2px 2px 4px #999;
-    position: relative;
+    cursor: pointer;
 }
 
-main div.card:hover {
+main div.card > img {
+    width: 70%;
+    text-align: center;
+    visibility: hidden;
+}
+
+main div.card > div.card-title {
+    position: absolute;
+    bottom: 2%;
+    width: 100%;
+    font-size: 20px;
+    color: #E61986;
+    text-align: center;
+    visibility: hidden;
+}
+
+main div.col-25:hover > div.card {
+    transition: transform 0.6s;
+    transform: rotateY(180deg);
     background: #FFF;
+}
+
+main div.col-25:hover > div.card > div.card-title,
+main div.col-25:hover > div.card > img {
+    transition-delay: 0.2s;
+    transform: rotateY(180deg);
+    visibility: visible;
 }
 
 main div.card.active {
     background: #FFF;
 }
 
-main div.card > img {
-    width: 70%;
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translateX(-50%);
-    display: none;
-}
-
-main div.card > div.card-title {
-    width: 100%;
-    font-size: 20px;
-    color: #E61986;
-    text-align: center;
-    position: absolute;
-    bottom: 4%;
-    display: none;
-}
-
-main div.card:hover > img,
-main div.card.active > img,
-main div.card:hover > div.card-title,
-main div.card.active > div.card-title {
-    display: block;
+main div.card.active > div.card-title,
+main div.card.active > img {
+    visibility: visible;
 }
 
 /*disclaimer*/
